fixed width issue due to padding on smaller devices;

--- a/styles/_main.scss
+++ b/styles/_main.scss
@@ -127,9 +127,6 @@ body {
     display: flex;
     flex-direction: column;
     min-height: 75vh;
-    padding: 1rem 2rem;
-
-    padding: 1rem;
 
     h1 {
       font-weight: 800;
